style(xxs): fix white space
This commit includes changes to white spaces on xxs screens.
The changes include:

- Adjusting width and centering contents of the hero mail block.
- Adjusting text size of footer info and link blocks.

These changes ensure that the above named blocks renders well on xxs
devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -149,11 +149,11 @@ vertical-align: top;
 .hero__offer-list-item {
   background: url(assets/Checkmark.svg) no-repeat left center;
   padding-left: 3.5rem;
-  line-height: 1.5;
+  line-height: 1.4;
   gap:3rem;
   list-style: none;
   font-weight:600; 
- font-size:1.6rem;
+ font-size:1.5rem;
 }
 
 .hero__offer-list-item:not(:last-of-type) {
@@ -173,6 +173,7 @@ vertical-align: top;
   min-height: 7rem;
   width: 100%;
   display: flex;
+  justify-content: center;
   gap: 2rem; 
   flex-wrap: wrap;
 }
@@ -422,16 +423,16 @@ vertical-align: top;
   min-height: 30rem;
   display: grid;
   grid-template-columns: 1fr;
-  justify-items: center;
-  padding: 10% 2%;
+  justify-items: center;  
 }
 
 .footer__info-block {
   min-height: 15rem;
-  width:80%;
+  width:90%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top:8rem;
 }
 
 .footer__info {
@@ -440,7 +441,7 @@ vertical-align: top;
 }
 
 .footer__info-heading-block {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 600;
   color: #ffffff;
   margin-bottom: 1rem;
@@ -448,6 +449,7 @@ vertical-align: top;
 
 .footer__info-link-block {
   min-height: 15rem;
+  width:90%;
   display: flex;
   justify-content: center;
   align-items: center; 
@@ -456,15 +458,16 @@ vertical-align: top;
 
 .footer__info-links {
   min-height: 15rem;
-  width: 80%;
-  display:flex; 
-  row-gap:4rem; 
+  width: 100%;
+  display:flex;  
+  column-gap:3.6rem;  
+  row-gap: 6rem;;
   flex-wrap: wrap; 
 }
 
 .footer__info-link-list {
   list-style: none;
-  width:14rem; 
+  width:10rem; 
 }
 
 .footer__info-link-item {
@@ -473,7 +476,7 @@ vertical-align: top;
 
 .link-title {
   color: #ffffff;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 600;
   margin-bottom: 1.2rem;
 }
